<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentProfileDelete">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/delete_profile"
        android:textSize="@dimen/headin_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="301dp"
        android:layout_height="57dp"
        android:layout_marginTop="21dp"
        android:text="@string/sure_msg"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="351dp"
        android:layout_height="45dp"
        android:layout_marginTop="34dp"
        android:text="@string/delete_warning_msg"
        android:textAlignment="center"
        android:textColor="@color/warning_red_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnDonate"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@color/secondary_color"
        android:fontFamily="@font/abeezee"
        android:text="@string/delete"
        app:cornerRadius="@dimen/btnRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="@color/heading_hash"
        android:fontFamily="@font/abeezee"
        android:text="@string/txt_cancel"
        app:cornerRadius="@dimen/btnRadius"
        app:layout_constraintEnd_toStartOf="@+id/btnDonate"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>